Closed Bug 392003 Opened 18 years ago Closed 18 years ago

first run migration / import from IE is slow, history import should use "run in batch"

Categories

(Firefox :: Bookmarks & History, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 3 alpha8

People

(Reporter: moco, Assigned: moco)

References

Details

(Keywords: perf)

Attachments

(2 files, 2 obsolete files)

first run migration / import from IE is slow, history / bookmark import should use "run in batch" see also bug #380134
Flags: blocking-firefox3?
Attached patch wip patch (obsolete) — Splinter Review
Attached patch patchSplinter Review
Attachment #276457 - Attachment is obsolete: true
Attachment #276458 - Flags: review?(dietrich)
note, I have duplicated mano's work in nsNavBookmarks.cpp for using a lock and a transaction with batching. (perhaps he should review?) previously, batching for history only for observers. if this looks sound, we should also: 1) fix other history importers 2) fix bookmark importers
Assignee: nobody → sspitzer
Depends on: 382073
Comment on attachment 276458 [details] [diff] [review] patch switching review to robert, who reviewed the bookmark version of this patch.
Attachment #276458 - Flags: review?(dietrich) → review?(sayrer)
Comment on attachment 276458 [details] [diff] [review] patch r=sayrer, but please add some asserts to check that our batch balancing is sane. (like nsNavHistoryResult.cpp#2285)
Attachment #276458 - Flags: review?(sayrer) → review+
Summary: first run migration / import from IE is slow, history / bookmark import should use "run in batch" → first run migration / import from IE is slow, history import should use "run in batch"
fixed. Checking in toolkit/components/places/src/nsNavHistory.cpp; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v <-- nsNavHistory.cpp new revision: 1.153; previous revision: 1.152 done Checking in toolkit/components/places/src/nsNavHistory.h; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.h,v <-- nsNavHistory.h new revision: 1.90; previous revision: 1.89 done Checking in toolkit/components/places/src/nsNavHistoryResult.cpp; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistoryResult.cpp,v <-- nsNavHistoryResult.cpp new revision: 1.111; previous revision: 1.110 done Checking in toolkit/components/places/src/nsNavHistoryResult.h; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistoryResult.h,v <-- nsNavHistoryResult.h new revision: 1.46; previous revision: 1.45 done Checking in browser/components/migration/content/migration.js; /cvsroot/mozilla/browser/components/migration/content/migration.js,v <-- migration.js new revision: 1.35; previous revision: 1.34 done Checking in browser/components/migration/public/nsIBrowserProfileMigrator.idl; /cvsroot/mozilla/browser/components/migration/public/nsIBrowserProfileMigrator.idl,v <-- nsIBrowserProfileMigrator.idl new revision: 1.9; previous revision: 1.8 done Checking in browser/components/migration/src/nsIEProfileMigrator.cpp; /cvsroot/mozilla/browser/components/migration/src/nsIEProfileMigrator.cpp,v <-- nsIEProfileMigrator.cpp new revision: 1.63; previous revision: 1.62 done Checking in browser/components/migration/src/nsIEProfileMigrator.h; /cvsroot/mozilla/browser/components/migration/src/nsIEProfileMigrator.h,v <-- nsIEProfileMigrator.h new revision: 1.14; previous revision: 1.13 done Checking in browser/components/places/public/nsIPlacesImportExportService.idl; /cvsroot/mozilla/browser/components/places/public/nsIPlacesImportExportService.idl,v <-- nsIPlacesImportExportService.idl new revision: 1.3; previous revision: 1.2 done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 3 M8
Blocks: 380307
Flags: in-litmus?
Keywords: perf
Flags: blocking-firefox3? → blocking-firefox3+
verified with - Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a8pre) Gecko/2007091304 Minefield/3.0a8pre
Status: RESOLVED → VERIFIED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: