fix for bug #392003:  first run migration / import from IE is slow, history import should use "run in batch" r=sayrer